--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/liburing"]
 	path = deps/liburing
 	url = https://github.com/axboe/liburing.git
+[submodule "deps/glog"]
+	path = deps/glog
+	url = https://github.com/google/glog.git
