--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,3 +3,6 @@ target_link_libraries(echo libnet)
 
 add_executable(pingpong pingpong.cpp)
 target_link_libraries(pingpong pthread)
+
+add_executable(fileop fileop.cpp)
+target_link_libraries(fileop libnet)
